# pirates

./: .agent  .claude  .gemini  .gitignore  AGENT.md  Cargo.toml  FUTURE_PLANS.md  INDEX.md  README.md  WORK_LOG.md  WORK_PLAN.md  context-engine.yaml
.agent/rules/: bevy.md  development.md  documentation.md  getting-started.md  git-workflow.md  git.md
.agent/workflows/: accept.md  architect.md  audit.md  forge.md  init.md  next-task.md  optimize.md  reflect.md  sync.md
.ai/rules/: development.md
.ai/scripts/: deploy_ai.py
.ai/workflows/: accept.md  architect.md  audit.md  evolve.md  forge.md  init.md  next-task.md  optimize.md  refine.md  sync.md
assets/shaders/: fluids.wgsl  ink_parchment.wgsl  integrate.wgsl  stippling.wgsl  water_material.wgsl  water_v3.wgsl
debug/: shader-crash.md
docs/: combat_water_v2.md  combat_water_v3.md  pathing.md  refactor.md  testing.md  weathered.md
docs/protocol/: INDEX.md  INVARIANTS.md  MANIFESTO.md
src/: lib.rs  main.rs
src/components/: camera.rs  cargo.rs  combat.rs  companion.rs  contract.rs  current.rs  fade_controller.rs  health.rs  hit_flash.rs  ink_reveal.rs  intel.rs  location_label.rs  loot.rs  mod.rs  navigation.rs  order.rs  port.rs  region.rs  scene.rs  ship.rs  typewriter.rs  worldmap.rs
src/events/: mod.rs
src/plugins/: cartouche.rs  combat.rs  companion.rs  compass_rose.rs  core.rs  debug_ui.rs  fade_controller.rs  fleet_ui.rs  fluid_simulation.rs  graphics.rs  input.rs  main_menu.rs  mod.rs  overlay_ui.rs  (+8 more)
workflows/: accept.md  architect.md  audit.md  collaborate.md  forge.md  init.md  refine.md
(+63 files in other folders)
