[package]
name = "pirates"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_rapier2d = "0.27"
bevy_ecs_tilemap = "0.14"
bevy_egui = "0.28"
bevy_kira_audio = "0.20"
bevy_save = "0.14"
steamworks = "0.11"
noise = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
