[package]
name = "pirates"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Engine
bevy = { version = "0.15", features = ["dynamic_linking"] }

# Physics (Avian - successor to bevy_xpbd)
avian2d = "0.2"

# Input Management (action-based input)
leafwing-input-manager = "0.16"

# UI
bevy_egui = "0.31"

# Tilemap
bevy_ecs_tilemap = "0.15"

# Audio
bevy_kira_audio = "0.21"

# Persistence
bevy_save = "0.16"

# Steam Integration
steamworks = "0.11"

# Utilities
noise = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
bytemuck = { version = "1.14", features = ["derive"] }

# GPU Particles
bevy_hanabi = { version = "0.14", default-features = false, features = ["2d"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
